--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -29,7 +29,7 @@
         <td><%= user.name %></td>
         <td><%= user.email %></td>
         <td><%= user.admin ? 'あり' : 'なし' %></td>
-        <td><%= user.tasks.length  %></td>
+        <td><%= user.tasks.size  %></td>
         <td><%= link_to t('common.show'), admin_user_path(user.id), class:"show-user" %></td>
         <td><%= link_to t('common.edit'), edit_admin_user_path(user.id), class:"edit-user" %></td>
         <td><%= link_to t('common.destroy'), admin_user_path(user.id), method: :delete, data: { confirm: t('common.confirm_destroy') }, class:"destroy-user" %></td>
