--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'edit', user: @user %>
 
-<%= link_to t('common.back'), user_path, id:"back" %>
+<div class = "text-right">
+    <%= link_to t('common.back'), user_path, id:"back", class: "btn btn-link"  %>
+</div>
