--- a/app/views/admin/users/_edit.html.erb
+++ b/app/views/admin/users/_edit.html.erb
@@ -11,34 +11,36 @@
   <% end %>
 
   
-    <div class="field">
-      <%= f.label :name, t('activerecord.attributes.user.name') %>
-      <%= f.text_field :name %>
+   <div class="form-group">
+      <%= f.label :name, t('activerecord.attributes.user.name'), class:"control-label" %>
+      <%= f.text_field :name, class:"form-control" %>
     </div>
   
-    <div class="field">
-      <%= f.label :email, t('activerecord.attributes.user.email') %>
-      <%= f.email_field :email %>
+    <div class="form-group">
+      <%= f.label :email, t('activerecord.attributes.user.email'), class:"control-label"  %>
+      <%= f.email_field :email, class:"form-control" %>
     </div>
   
-    <div class="field">
-      <%= f.label :password, t('activerecord.attributes.user.password') %>
-      <%= f.password_field :password %>
+    <div class="form-group">
+      <%= f.label :password, t('activerecord.attributes.user.password'), class:"control-label"  %>
+      <%= f.password_field :password, class:"form-control" %>
     </div>
   
-    <div class="field">  
-      <%= f.label :password_confirmation, t('activerecord.attributes.user.password_confirmation') %>
-      <%= f.password_field :password_confirmation %>
+    <div class="form-group">  
+      <%= f.label :password_confirmation, t('activerecord.attributes.user.password_confirmation'), class:"control-label"  %>
+      <%= f.password_field :password_confirmation, class:"form-control" %>
     </div>
 
-    <div class="field">  
-      <%= f.label :admin, t('activerecord.attributes.user.admin') %>
-      <%= f.check_box :admin , :as => :boolean %>
+    <div class="form-group"> 
+      <%= f.label :admin, t('activerecord.attributes.user.admin'), class:"control-label"  %>
+      <div>
+        <%= f.check_box :admin , :as => :boolean %>
+      </div>
     </div>
 
 
-    <div class="actions">
-       <%= f.submit id: "update-user"%>
+    <div class = "text-right">
+       <%= f.submit id: "update-user",class:"btn btn-primary" %>
     </div>
   
    <% end %>
