--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'edit', user: @user %>
 
-<%= link_to t('common.back'), admin_users_path,id:"back"%>
+<%= link_to t('common.back'), admin_users_path,id:"back",class:"btn btn-link" %>
