--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -12,13 +12,13 @@
 <% end %>
 
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th><%= User.human_attribute_name(:name) %></th>
-      <th><%= User.human_attribute_name(:email) %></th>
-      <th><%= User.human_attribute_name(:admin) %></th>
-      <th>タスク数</th>
+      <th scope="col"><%= User.human_attribute_name(:name) %></th>
+      <th scope="col"><%= User.human_attribute_name(:email) %></th>
+      <th scope="col"><%= User.human_attribute_name(:admin) %></th>
+      <th scope="col">タスク数</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -30,9 +30,9 @@
         <td><%= user.email %></td>
         <td><%= user.admin ? 'あり' : 'なし' %></td>
         <td><%= user.tasks.size  %></td>
-        <td><%= link_to t('common.show'), admin_user_path(user.id), class:"show-user" %></td>
-        <td><%= link_to t('common.edit'), edit_admin_user_path(user.id), class:"edit-user" %></td>
-        <td><%= link_to t('common.destroy'), admin_user_path(user.id), method: :delete, data: { confirm: t('common.confirm_destroy') }, class:"destroy-user" %></td>
+        <td><%= link_to t('common.show'), admin_user_path(user.id), class:"show-user",class:"btn btn-primary" %></td>
+        <td><%= link_to t('common.edit'), edit_admin_user_path(user.id), class:"edit-user",class:"btn btn-primary" %></td>
+        <td><%= link_to t('common.destroy'), admin_user_path(user.id), method: :delete, data: { confirm: t('common.confirm_destroy') }, class:"destroy-user",class:"btn btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
