--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,33 +7,49 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
 
-  <nav>
-    <ul>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand">Task App</a>
+    <ul class="navbar-nav ml-auto">
       <% if logged_in? %>
         <% if @current_user.admin? %>
-          <li><%= link_to t('common.users-index'), admin_users_path, id:"users-index" %></li>
-          <li><%= link_to t('common.add-user'), new_admin_user_path, id:"add-user" %></li>
-          <li><%= link_to t('common.index'), tasks_path, id:"tasks-index" %></li>
-          <li><%= link_to t('common.new'), new_task_path, id:"new-task" %></li>
-          <li><%= link_to t('common.account-setting'), user_path(@current_user.id), id:"account-setting" %></li>
-          <li><%= link_to t('common.sign-out'), session_path(@current_user.id), method: :delete, id:"sign-out" %></li>
+          <li class="nav-item px-1"><%= link_to t('common.users-index'), admin_users_path, id:"users-index" %></li>
+          <li class="nav-item px-1"><%= link_to t('common.add-user'), new_admin_user_path, id:"add-user" %></li>
+          <li class="nav-item px-1"><%= link_to t('common.index'), tasks_path, id:"tasks-index" %></li>
+          <li class="nav-item px-1"><%= link_to t('common.new'), new_task_path, id:"new-task" %></li>
+          <li class="nav-item px-1"><%= link_to t('common.labels-index'), labels_path, id:"labels-index" %></li>
+          <li class="nav-item px-1"><%= link_to t('common.new-label'), new_label_path, id:"new-label" %></li>
+          <li class="nav-item px-1"><%= link_to t('common.account-setting'), user_path(@current_user.id), id:"account-setting" %></li>
+          <li class="nav-item px-1"><%= link_to t('common.sign-out'), session_path(@current_user.id), method: :delete, id:"sign-out" %></li>
         <% else %>
-          <li><%= link_to t('common.index'), tasks_path, id:"tasks-index" %></li>
-          <li><%= link_to t('common.new'), new_task_path, id:"new-task" %></li>
-          <li><%= link_to t('common.account-setting'), user_path(@current_user.id), id:"account-setting" %></li>
-          <li><%= link_to t('common.sign-out'), session_path(@current_user.id), method: :delete, id:"sign-out" %></li>
+          <li class="nav-item px-1"><%= link_to t('common.index'), tasks_path, id:"tasks-index" %></li>
+          <li class="nav-item px-1"><%= link_to t('common.new'), new_task_path, id:"new-task" %></li>
+          <li class="nav-item px-1"><%= link_to t('common.labels-index'), labels_path, id:"labels-index" %></li>
+          <li class="nav-item px-1"><%= link_to t('common.new-label'), new_label_path, id:"new-label" %></li>
+          <li class="nav-item px-1"><%= link_to t('common.account-setting'), user_path(@current_user.id), id:"account-setting" %></li>
+          <li class="nav-item px-1"><%= link_to t('common.sign-out'), session_path(@current_user.id), method: :delete, id:"sign-out" %></li>
         <% end %>
       <% else %>
-        <li><%= link_to t('common.sign-up'), new_user_path, id:"sign-up" %></li>
-        <li><%= link_to t('common.sign-in'), new_session_path, id:"sign-in" %></li>
+        <li class="nav-item px-1"><%= link_to t('common.sign-up'), new_user_path, id:"sign-up" %></li>
+        <li class="nav-item px-1"><%= link_to t('common.sign-in'), new_session_path, id:"sign-in" %></li>
       <% end %>
     </ul>
   </nav>
 
   <body>
     <p><%= notice %></p>
-    <%= yield %>
+    <% flash.each do |message_type, message| %>
+      <div class="alert alert-<%= message_type %>"><%= message %></div>
+    <% end %>
+
+    <div class='container'>
+      <%= yield %>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
