--- a/app/views/tasks/_search.html.erb
+++ b/app/views/tasks/_search.html.erb
@@ -1,17 +1,25 @@
 <%= form_with(url: tasks_path, method: :get, scope: :search, local: true) do |form| %>
 
-    <div class="field">
-        <%= form.label Task.human_attribute_name(:status) %>
-        <%= form.select :status, Task.statuses.keys.to_a, { include_blank: "" } %>
-    </div>
+    <div class='row' >
 
-    <div class="field">
-      <%= form.label Task.human_attribute_name(:title) %>
-      <%= form.text_field :title %>
+      <div class="form-group col-sm-2">
+          <%= form.label Task.human_attribute_name(:status) %>
+          <%= form.select :status, Task.statuses.keys.to_a, { include_blank: "" }, class:"form-control"  %>
+      </div>
+
+      <div class="form-group col-sm">
+        <%= form.label Task.human_attribute_name(:title) %>
+        <%= form.text_field :title, class:"form-control" %>
+      </div>
+
+      <div class="form-group col-sm">
+        <%= form.label Label.human_attribute_name(:name) %>
+        <%= form.select :label, Label.where(user: current_user).pluck(:name, :id), { include_blank: "" }, class:"form-control" %>
+      </div>
     </div>
    
-    <div class="actions">
-      <%= form.submit "検索",  id:"search_task" %>
+    <div class = "text-right">
+      <%= form.submit "検索",  id:"search_task",class:"btn btn-primary"  %>
     </div>
 
 <% end %>
