--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,15 +2,15 @@
 
 <%= render 'search' %>
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th><%= Task.human_attribute_name(:title) %></th>
-      <th><%= Task.human_attribute_name(:content) %></th>
-      <th><%= Task.human_attribute_name(:created_at) %></th>
-      <th><%= link_to Task.human_attribute_name(:deadline_on), tasks_path(sort_deadline_on:true) %></th>
-      <th><%= link_to Task.human_attribute_name(:priority), tasks_path(sort_priority:true) %></th>
-      <th><%= Task.human_attribute_name(:status) %></th>
+      <th scope="col"><%= Task.human_attribute_name(:title) %></th>
+      <th scope="col"><%= Task.human_attribute_name(:content) %></th>
+      <th scope="col"><%= Task.human_attribute_name(:created_at) %></th>
+      <th scope="col"><%= link_to Task.human_attribute_name(:deadline_on), tasks_path(sort_deadline_on:true) %></th>
+      <th scope="col"><%= link_to Task.human_attribute_name(:priority), tasks_path(sort_priority:true) %></th>
+      <th scope="col"><%= Task.human_attribute_name(:status) %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,9 +24,9 @@
         <td><%= task.deadline_on.strftime("%Y/%m/%d") %></td>
         <td><%= task.priority %></td>
         <td><%= task.status %></td>
-        <td><%= link_to t('common.show'), task, class:"show-task" %></td>
-        <td><%= link_to t('common.edit'), edit_task_path(task), class:"edit-task" %></td>
-        <td><%= link_to t('common.destroy'), task, method: :delete, data: { confirm: t('common.confirm_destroy') }, class:"destroy-task" %></td>
+        <td><%= link_to t('common.show'), task, class:"show-task",class:"btn btn-primary" %></td>
+        <td><%= link_to t('common.edit'), edit_task_path(task), class:"edit-task",class:"btn btn-primary" %></td>
+        <td><%= link_to t('common.destroy'), task, method: :delete, data: { confirm: t('common.confirm_destroy') }, class:"destroy-task",class:"btn btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
