--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -32,6 +32,13 @@
   <%= @task.status %>
 </p>
 
+<p>
+  <strong>ラベル:</strong>
+  <% @task.labels.each do |label| %>
+    <%= label.name %>
+  <% end %>
+</p>
 
-<%= link_to t('common.edit'), edit_task_path(@task), id:"edit-task" %> |
-<%= link_to t('common.back'), tasks_path, id:"back" %>
+
+<%= link_to t('common.edit'), edit_task_path(@task), id:"edit-task", class: "btn btn-link"  %> |
+<%= link_to t('common.back'), tasks_path, id:"back", class: "btn btn-link"  %>
