--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,28 +10,28 @@
   </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
+  <div class="form-group">
+    <%= f.label :name, class:"control-label"  %>
+    <%= f.text_field :name, class:"form-control"  %>
   </div>
 
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.email_field :email %>
+  <div class="form-group">
+    <%= f.label :email, class:"control-label"   %>
+    <%= f.email_field :email, class:"form-control" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <%= f.password_field :password %>
+  <div class="form-group">
+    <%= f.label :password, class:"control-label"   %>
+    <%= f.password_field :password, class:"form-control" %>
   </div>
 
-  <div class="field">  
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
+  <div class="form-group"> 
+    <%= f.label :password_confirmation, class:"control-label"   %>
+    <%= f.password_field :password_confirmation, class:"form-control" %>
   </div>
 
-  <div class="actions">
-     <%= f.submit id: "create-user"%>
+  <div class = "text-right">
+     <%= f.submit id: "create-user",class:"btn btn-primary"  %>
   </div>
 
  <% end %>
