modified class setting on all view file and finished to review all requirements

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -41,8 +41,8 @@
         <td><%= task.priority %></td>
         <td><%= task.status %></td>
         <td><%= link_to t('common.show'), task, class:"show-task",class:"btn btn-primary"  %></td>
-        <td><%= link_to t('common.edit'), edit_task_path(task), class:"edit-task",class:"btn btn-primary"  %></td>
-        <td><%= link_to t('common.destroy'), task, method: :delete, data: { confirm: t('common.confirm_destroy') }, class:"destroy-task",class:"btn btn-danger" %></td>
+        <td><%= link_to t('common.edit'), edit_task_path(task), class:"edit-task btn btn-primary"  %></td>
+        <td><%= link_to t('common.destroy'), task, method: :delete, data: { confirm: t('common.confirm_destroy') }, class:"destroy-task btn btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
