--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -30,8 +30,8 @@
         <td><%= user.email %></td>
         <td><%= user.admin ? 'あり' : 'なし' %></td>
         <td><%= user.tasks.size  %></td>
-        <td><%= link_to t('common.show'), admin_user_path(user.id), class:"show-user",class:"btn btn-primary" %></td>
-        <td><%= link_to t('common.edit'), edit_admin_user_path(user.id), class:"edit-user",class:"btn btn-primary" %></td>
+        <td><%= link_to t('common.show'), admin_user_path(user.id), class:"show-user btn btn-primary" %></td>
+        <td><%= link_to t('common.edit'), edit_admin_user_path(user.id), class:"edit-user btn btn-primary" %></td>
         <td><%= link_to t('common.destroy'), admin_user_path(user.id), method: :delete, data: { confirm: t('common.confirm_destroy') }, class:"destroy-user",class:"btn btn-danger" %></td>
       </tr>
     <% end %>
