--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -24,9 +24,9 @@
         <td><%= task.deadline_on.strftime("%Y/%m/%d") %></td>
         <td><%= task.priority %></td>
         <td><%= task.status %></td>
-        <td><%= link_to t('common.show'), task, class:"show-task",class:"btn btn-primary" %></td>
-        <td><%= link_to t('common.edit'), edit_task_path(task), class:"edit-task",class:"btn btn-primary" %></td>
-        <td><%= link_to t('common.destroy'), task, method: :delete, data: { confirm: t('common.confirm_destroy') }, class:"destroy-task",class:"btn btn-danger" %></td>
+        <td><%= link_to t('common.show'), task, class:"show-task btn btn-primary" %></td>
+        <td><%= link_to t('common.edit'), edit_task_path(task), class:"edit-task btn btn-primary" %></td>
+        <td><%= link_to t('common.destroy'), task, method: :delete, data: { confirm: t('common.confirm_destroy') }, class:"destroy-task btn btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
